shared-libs/terraform/getting-started/03/demos/ModuleTwo/modules/security/main.tf
resource "aws_security_group" "web" {
  name   = "${var.name_prefix}-sg"
  vpc_id = var.vpc_id
  tags   = { Name = "${var.name_prefix}-sg" }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.allowed_ssh_cidr]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "All egress"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
